# sc-tests

./: kp.scd  kp_by_yota.scd
jf/: .gitignore
jf/jellyfish_unity/Assets/: ButtonLauncher.cs  FPSLimiter.cs  fps.cs
jf/jellyfish_unity/Assets/Atkinson_Hyperlegible/: AtkinsonHyperlegible-Bold SDF.asset
jf/jellyfish_unity/Assets/OSC/: OSCBehaviour.cs  OSCManager.cs
jf/jellyfish_unity/Assets/Old/: tenta.vfx  tentacreuls.vfx  tentacruelShader.shadergraph  tentacruelVFXShader.shadergraph  white.mat
jf/jellyfish_unity/Assets/Scenes/: OutdoorsScene.unity
jf/jellyfish_unity/Assets/Settings/: HDRP Balanced.asset  (+3 more)
jf/jellyfish_unity/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  RiderScriptEditorPersistedState.asset
jf/sc/: externalOSC.scd  main.scd  scratch.scd
jf/sc/control_presets/: default.json
jf/sc/datasets/: guitarHarmonics.scd  guitarScrape.scd  water.scd
jf/sc/map_util/: flat_fabric.scd  push_forward_on_cue.scd  waterGrain_nil.scd
jf/sc/maps/: 00.scd  01.scd  02.scd  03.scd  04.scd  05.scd  06.scd  07.scd  08.scd  09.scd  10.scd
jf/sc_old/old/: external_osc.scd  flucoma_slicer.scd  live_granulator.scd  main.scd
jf/sc_other/: lips_pop_fish_test.scd
jf/webcam_track/: CMakeLists.txt  main.cpp
jf/webcam_track/oscpack_1_1_0/: CMakeLists.txt
jf/webcamtrack_mediapipe/: head_tracker_relay.py  landmark_processor.py  main.py  types_for_project.py  video_processor.py
jf/webcamtrack_mediapipe/data_extractors/: __init__.py  head_tilt.py  new_nodder.py  nod_eyebrows.py  nod_head_tilt.py  nod_identifier.py  relative_info.py  util.py
(+106 files in other folders)
